k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gestionar
  namespace: gestionar
spec:
  selector:
    app: gestionar
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
